# graffold-ingest

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/graffold_ingest/: __init__.py  api.py  cli.py  config.py  incremental.py  queue.py  schema_store.py  tui.py
src/graffold_ingest/agent/: __init__.py  scrape_agent.py
src/graffold_ingest/connectors/: __init__.py  api.py  base.py  csv.py  database.py  pdf.py  sparselink.py  web.py
src/graffold_ingest/pipeline/: __init__.py  chunk.py  dedup.py  default_schema.yaml  discover.py  embed.py  export.py  extract.py  gnn_validate.py  nestboot_fdr.py  node_labeler.py  orchestrator.py  publish.py  resolve.py  schema.py  sparselink_extract.py  vision.py
