[project]
name = "graffold-ingest"
version = "0.1.0"
description = "Turn anything into a knowledge graph — domain-agnostic ingestion agent"
authors = [{name = "Graffold", email = "dev@graffold.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["boto3>=1.34", "openai>=1.0"]
scrape = ["playwright>=1.40"]
all = ["graffold-ingest[llm,scrape]"]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0", "ruff>=0.4"]

[project.scripts]
graffold-ingest = "graffold_ingest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graffold_ingest"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
